# Catering-management-system

./: .env.example  Cargo.toml  Dockerfile  README.md  flake.nix
migrations/: 001_create_users.sql  002_create_roles.sql  003_create_user_roles.sql  004_create_permissions.sql  005_create_role_permissions.sql  006_create_customers.sql  007_create_events.sql  008_alter_events.sql  009_create_menu_items.sql  010_create_quotes.sql  011_create_quote_items.sql  012_create_payments.sql
src/: config.rs  main.rs  repository.rs  utils.rs
src/config/: cors.rs
src/entity/: mod.rs  permissions.rs  role.rs  user.rs
src/model/: customer.rs  menu_item.rs  mod.rs
src/models/: event.rs  payment.rs  quote.rs
src/repositories/: database.rs
