[package]
name = "catering-system-api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.11"
log = "0.4.33"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-async-std"] }
thiserror = "2.0.18"
